# pygloop

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_qqbar_nX.sh
IssuesWithDariosCollinearCTs/: issues_with_darios_collinear_cts.tex
configs/DY/: generate.toml
configs/GGHHH/: generate.toml  runtime.toml
configs/ScalarGravity/: runtime.toml
examples/: gghhh.sh  gghhh_profiling_1l.sh  gghhh_profiling_2l.sh  gghhh_profiling_3l.sh  profile.py  study_classical_limit.py
resources/GGHHH/: 3L_graphs.dot
resources/ScalarGravity/: 1L_graphs.dot  2L_graphs.dot  3L_graphs.dot  4L_graphs.dot
src/: pygloop.py
src/processes/: dy.py  dy_utils.py  gghhh.py  template_process.py
src/processes/dy/: commands.txt  dy.py  dy_classes.py  dy_evaluators.py  dy_graph_utils.py  dy_infrared_test.py  dy_integrand.py  dy_integrated_uv_ct.py  dy_utils.py  table_uv_ct.json
src/processes/gghhh/: gghhh.py  targets.txt
src/processes/qqbar_nX/: README.md  __init__.py  config.toml  config_no_thresholds.toml  config_no_thresholds_nosym.toml  config_no_thresholds_nosym_single_group.toml  config_nosym.toml  plot_xspace_line_scan.py  plot_xspace_theta_scan.py  qqbar_nX.py  qqbar_nX_4d.py  qqbar_nX_cff.py  qqbar_nX_counterterms.py  qqbar_nX_graphs.py  qqbar_nX_standalone.toml
src/processes/scalar_gravity/: classical_limit_tools.py  scalar_gravity.py
src/utils/: cff.py  naive_integrator.py  phase_space_generation.py  plotting.py  polarizations.py  symbolica_integrator.py  utils.py  vegas_integrator.py
tests/: conftest.py  helpers.py  test_dy_graph_cut_sum_references.py  test_fast.py  test_slow.py
(+45 files in other folders)
