[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygloop"
version = "0.1.0"
description = "Python project steering gammaloop and spenso for various tailored custom applications in HEP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib",
  "numpy",
  "prettytable",
  "progressbar2",
  "symbolica",
  "vegas",
  "ufo-model-loader",
]

[tool.basedpyright]
# Placeholder: set your preferred type checking mode.
typeCheckingMode = "basic"
# Placeholder: tune unused import reporting.
#reportUnusedImport = "none"
ignore = ["src/processes/dy/*.py"]
include = ["src", "tests"]
extraPaths = ["src"]
reportMissingImports = "warning"

[tool.ruff]
# Include both library code and tests in linting scope.
src = ["src", "tests"]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"src/processes/dy/*.py" = ["ALL"]
